examples/test/testpolicy14412.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14412
  namespace: namespace498
spec:
  podSelector:
    matchLabels:
      key19: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value26
          key10: value22
          key28: value33
      podSelector:
        matchLabels:
          key44: value43
          key15: value11
